# improved-broccoli

./: .gitignore  .gitmodules  Cargo.toml  README.md
chip8/src/: cpu.rs  instruction.rs  lib.rs  memory.rs  screen.rs
gui/: Cargo.toml  index.html
gui/locales/: en.yml
gui/src/: app.rs  keyboard.rs  lib.rs  main.rs  screen_ui.rs  settings.rs
